@@ -2,7 +2,7 @@ Source: webauth
 Section: web
 Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>> 7), apache2-threaded-dev (>= 2.2),
+Build-Depends: debhelper (>= 8), apache2-threaded-dev (>= 2.2),
  libcgi-fast-perl, libcurl4-openssl-dev, libhtml-template-perl,
  libipc-run-perl, libkrb5-dev, libldap2-dev, libssl-dev, libtimedate-perl,
  liburi-perl, libwww-perl, libxml-parser-perl, perl
