@@ -1,7 +1,7 @@
-etc/apache2/mods-available/webauth.conf
-etc/apache2/mods-available/webauth.load
-etc/apache2/mods-available/webauthldap.conf
-etc/apache2/mods-available/webauthldap.load
-etc/webauth
-usr/lib/apache2/modules/mod_webauth.so
-usr/lib/apache2/modules/mod_webauthldap.so
+conf/debian/webauth.conf        etc/apache2/mods-available
+conf/debian/webauth.load        etc/apache2/mods-available
+conf/debian/webauthldap.conf    etc/apache2/mods-available
+conf/debian/webauthldap.load    etc/apache2/mods-available
+
+debian/tmp/usr/lib/apache2/modules/mod_webauth.so     usr/lib/apache2/modules
+debian/tmp/usr/lib/apache2/modules/mod_webauthldap.so usr/lib/apache2/modules
