@@ -1,1 +1,1 @@
-usr/lib/libwebauth.so.*
+debian/tmp/usr/lib/libwebauth.so.*      usr/lib
