@@ -1,4 +1,4 @@
-etc/webkdc/webkdc.conf
-usr/share/perl5
-usr/share/man/man3/WebKDC*.3pm
-usr/share/man/man3/WebLogin.3pm
+debian/webkdc.conf                              etc/webkdc
+debian/tmp/usr/share/perl5                      usr/share
+debian/tmp/usr/share/man/man3/WebKDC*.3pm       usr/share/man/man3
+debian/tmp/usr/share/man/man3/WebLogin.3pm      usr/share/man/man3
