@@ -1,2 +1,2 @@
-usr/bin
-usr/share/man/man1
+debian/tmp/usr/bin/*            usr/bin
+debian/tmp/usr/share/man/man1/* usr/share/man/man1
