@@ -1,1 +1,1 @@
-usr/share/weblogin
+debian/tmp/usr/share/weblogin   usr/share
