@@ -12,6 +12,9 @@ webauth (3.7.4-1) UNRELEASED; urgency=low
     - More robust generation of the pkg-config configuration file.
     - Clearer warning from WebLogin when paired with an old WebKDC.
     - Document the pt and sa key/value pairs in WebKDC logging.
+  * Update to debhelper compatibility level V8.
+    - Use debhelper rule minimization with overrides.
+    - Do more work in *.install files and less work in debian/rules.
 
  -- Russ Allbery <rra@debian.org>  Thu, 05 May 2011 14:59:33 -0700
 
